--- a/static/scss/components/_button.scss
+++ b/static/scss/components/_button.scss
@@ -12,7 +12,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: .7em;
+    bottom: 1.5em;
     @media #{$breakpoint-sm} {
         height: 30px;
     }
