Adjust sizes of home about sect

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -29,6 +29,7 @@
   'components/navbar',
   'components/button',
   'components/quiz_banner',
+  'components/preloader',
   'components/quiz_full';
 
 // 6. Page-specific styles
