--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1606,92 +1606,6 @@ footer {
   bottom: 5px;
 }
 
-/* :: 3.0 Preloader CSS */
-#preloader {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: 9999999;
-  top: 0;
-  left: 0;
-  background-color: #f0f3f3;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  overflow: hidden;
-}
-
-.loader,
-.loader:before,
-.loader:after {
-  border-radius: 50%;
-  width: 2.5em;
-  height: 2.5em;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation: load7 1.8s infinite ease-in-out;
-  animation: load7 1.8s infinite ease-in-out;
-}
-
-.loader {
-  color: #bca858;
-  font-size: 6px;
-  position: relative;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-
-.loader:before,
-.loader:after {
-  content: '';
-  position: absolute;
-  top: 0;
-}
-
-.loader:before {
-  left: -3.5em;
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-
-.loader:after {
-  left: 3.5em;
-}
-
-@-webkit-keyframes load7 {
-  0%,
-  80%,
-  100% {
-    -webkit-box-shadow: 0 2.5em 0 -1.3em;
-            box-shadow: 0 2.5em 0 -1.3em;
-  }
-  40% {
-    -webkit-box-shadow: 0 2.5em 0 0;
-            box-shadow: 0 2.5em 0 0;
-  }
-}
-
-@keyframes load7 {
-  0%,
-  80%,
-  100% {
-    -webkit-box-shadow: 0 2.5em 0 -1.3em;
-            box-shadow: 0 2.5em 0 -1.3em;
-  }
-  40% {
-    -webkit-box-shadow: 0 2.5em 0 0;
-            box-shadow: 0 2.5em 0 0;
-  }
-}
-
 .coach-cta-btn {
   height: 30px;
   margin: 0 auto;
@@ -1950,6 +1864,92 @@ footer {
 @media only screen and (min-width: 1200px) {
   .quiz-banner-button {
     font-size: .5em;
+  }
+}
+
+/* Preloader CSS */
+#preloader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 9999999;
+  top: 0;
+  left: 0;
+  background-color: #f0f3f3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+}
+
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+
+.loader {
+  color: #bca858;
+  font-size: 6px;
+  position: relative;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.loader:after {
+  left: 3.5em;
+}
+
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    -webkit-box-shadow: 0 2.5em 0 -1.3em;
+            box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    -webkit-box-shadow: 0 2.5em 0 0;
+            box-shadow: 0 2.5em 0 0;
+  }
+}
+
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    -webkit-box-shadow: 0 2.5em 0 -1.3em;
+            box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    -webkit-box-shadow: 0 2.5em 0 0;
+            box-shadow: 0 2.5em 0 0;
   }
 }
 
@@ -2531,7 +2531,7 @@ input[type='checkbox'] {
     -ms-grid-columns: auto 13em (13em)[2] auto;
         grid-template-columns: auto 13em repeat(2, 13em) auto;
     margin-top: 4em;
-    height: 21em;
+    height: 25em;
   }
 }
 
@@ -2539,7 +2539,7 @@ input[type='checkbox'] {
   .home-about {
     -ms-grid-columns: auto 12em (12em)[2] auto;
         grid-template-columns: auto 12em repeat(2, 12em) auto;
-    height: 19em;
+    height: 23em;
   }
 }
 
@@ -5436,7 +5436,7 @@ input[type='checkbox'] {
     -ms-grid-columns: auto 13em (13em)[2] auto;
         grid-template-columns: auto 13em repeat(2, 13em) auto;
     margin-top: 4em;
-    height: 21em;
+    height: 25em;
   }
 }
 
@@ -5444,7 +5444,7 @@ input[type='checkbox'] {
   .home-about {
     -ms-grid-columns: auto 12em (12em)[2] auto;
         grid-template-columns: auto 12em repeat(2, 12em) auto;
-    height: 19em;
+    height: 23em;
   }
 }
 
