Add quiz carousel

--- a/static/scss/base/_typography.scss
+++ b/static/scss/base/_typography.scss
@@ -48,6 +48,11 @@ $font-la-parisienne: 'la-parisienne', serif;
   letter-spacing: .2em;
 }
 
+.span-logo-font{
+  font-size: 2em;
+  margin: .5em;
+}
+
 .logo-1{
   font-family: $font-la-parisienne;
   line-height: 1.1;
