--- a/static/css/main.css
+++ b/static/css/main.css
@@ -399,6 +399,11 @@ template {
   letter-spacing: .2em;
 }
 
+.span-logo-font {
+  font-size: 2em;
+  margin: .5em;
+}
+
 .logo-1 {
   font-family: "la-parisienne", serif;
   line-height: 1.1;
@@ -1977,10 +1982,25 @@ body {
 }
 
 .quiz-intro-fs {
-  height: auto;
-  width: 27em;
-  margin: auto;
   text-align: center;
+  position: absolute;
+  height: 7em;
+  top: 0;
+  margin: auto;
+  bottom: 0;
+}
+
+.carousel,
+.carousel-inner {
+  height: 100%;
+}
+
+.quiz-carousel-item {
+  position: absolute;
+  height: 6em;
+  margin: auto;
+  top: 0;
+  bottom: 0;
 }
 
 .quiz-font-fs {
@@ -1994,6 +2014,11 @@ body {
   font-size: .8em;
 }
 
+.quiz-content {
+  height: 10em;
+  width: 29em;
+}
+
 .quiz-content-main-fs {
   font-size: .65em;
 }
@@ -2004,7 +2029,7 @@ body {
 }
 
 .quiz-title-fs {
-  margin-bottom: 0;
+  margin-bottom: 1em;
 }
 
 .quiz-label {
