--- a/static/scss/components/_quiz_full.scss
+++ b/static/scss/components/_quiz_full.scss
@@ -10,10 +10,25 @@ body { height: 100%; }
 }
 
 .quiz-intro-fs{
-    height: auto;
-    width: 27em;
-    margin: auto;
     text-align: center;
+    position: absolute;
+    height: 7em;
+    top: 0;
+    margin: auto;
+    bottom: 0;
+}
+
+.carousel,
+.carousel-inner{
+    height: 100%;
+}
+
+.quiz-carousel-item{
+    position: absolute;
+    height: 6em;
+    margin: auto;
+    top: 0;
+    bottom: 0;
 }
 
 .quiz-font-fs{
@@ -27,6 +42,11 @@ body { height: 100%; }
     font-size: .8em;
 }
 
+.quiz-content{
+    height: 10em;
+    width: 29em;
+}
+
 .quiz-content-main-fs{
     font-size: .65em;
 }
@@ -37,7 +57,7 @@ body { height: 100%; }
 }
 
 .quiz-title-fs{
-    margin-bottom: 0;
+    margin-bottom: 1em;
     
 }
 
