--- a/static/scss/base/_typography.scss
+++ b/static/scss/base/_typography.scss
@@ -143,6 +143,8 @@ $font-la-parisienne: 'la-parisienne', serif;
   }
   @media #{$breakpoint-xl} {
     font-size: 1em;
+    line-height: 1.4;
+
   }
   @media #{$breakpoint-xxl} {
     font-size: .9em;
@@ -165,6 +167,8 @@ $font-la-parisienne: 'la-parisienne', serif;
   @media #{$breakpoint-lg}, #{$breakpoint-xl} {
     font-size: .7em;
     margin-bottom: 0;
+    line-height: 1.4;
+
   }
   @media #{$breakpoint-xxl} {
     font-size: .6em;
