--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -198,8 +198,8 @@
         font-size: 1.35em;
     }
     @media #{$breakpoint-xl} {
-        width: 23em;
-        font-size: 1.15em;
+        width: 25em;
+        font-size: 1em;
     }
     @media #{$breakpoint-xxl} {
         width: 22em;
@@ -265,7 +265,7 @@
     }
     @media #{$breakpoint-xl} {
         display: grid;
-        grid-template-columns: auto 13em 4em 13em auto;
+        grid-template-columns: auto 15em 4em 15em auto;
         .normal-text{
             font-size: .65em;
         }
@@ -288,6 +288,18 @@
         .normal-text:nth-child(2){
             grid-column: 4/5;
         }
+    }
+}
+
+.first-col{
+    @media #{$breakpoint-min-md} {
+        grid-column: 2/3;
+    }
+}
+
+.second-col{
+    @media #{$breakpoint-min-md} {
+        grid-column: 4/5;
     }
 }
 
