--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1247,28 +1247,34 @@ footer {
 }
 
 .latest-posts {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: (9em)[2];
-      grid-template-rows: repeat(2, 9em);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .latest-post-item {
-  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 33.3333333%;
+          flex: 1 1 33.3333333%;
   position: relative;
   background-color: #fbf2ec;
 }
 
 .latest-post-item img {
   height: 100%;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .latest-post-text {
-  height: 6em;
+  height: 70%;
   margin: auto;
   position: absolute;
   width: 80%;
@@ -1276,6 +1282,13 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .latest-post-text {
+    width: 72%;
+    height: 40%;
+  }
 }
 
 .latest-post-ig {
