--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1004,7 +1004,7 @@ body {
 
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
   .contact-footer {
-    height: 18em;
+    height: 21em;
   }
 }
 
@@ -1028,7 +1028,7 @@ body {
     width: 21em;
     position: absolute;
     z-index: 2;
-    top: 4em;
+    top: 6em;
     left: 4em;
   }
 }
@@ -1258,12 +1258,31 @@ footer {
       flex-wrap: wrap;
 }
 
+@media only screen and (min-width: 768px) {
+  .latest-posts {
+    width: 11em;
+    position: absolute;
+    height: 17em;
+    z-index: 999;
+    right: 3em;
+    top: 2em;
+  }
+}
+
 .latest-post-item {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 33.3333333%;
           flex: 1 1 33.3333333%;
   position: relative;
   background-color: #fbf2ec;
+}
+
+@media only screen and (min-width: 768px) {
+  .latest-post-item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 50%;
+            flex: 1 1 50%;
+  }
 }
 
 .latest-post-item img {
@@ -1291,8 +1310,20 @@ footer {
   }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .latest-post-text .sect-subtitle {
+    font-size: .8em;
+  }
+}
+
 .latest-post-ig {
   font-size: 2em;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .latest-post-ig {
+    font-size: 1.5em;
+  }
 }
 
 .nav {
