--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1008,48 +1008,39 @@ body {
   }
 }
 
-.cf-content {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  padding: 3em 2em;
-  position: relative;
-  background-color: #f0f3f3;
-  text-align: center;
-}
-
-@media only screen and (min-width: 500px) and (max-width: 767px) {
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
   .cf-content {
-    padding: 3em 7em;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
-  .cf-content {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     background-color: white;
     padding: 0;
-    width: 37em;
+    width: 37.5em;
     position: absolute;
     z-index: 2;
-    top: 6em;
-    left: 5em;
+    top: 4em;
+    left: 0;
+    right: 0;
+    margin: auto;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .cf-content {
-    padding: 1em 2em;
-    width: 20em;
+    width: 40em;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .cf-content {
-    padding: 1.5em 2em;
-    width: 21em;
-    top: 4em;
-    left: 7em;
+    width: 40em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .cf-content {
+    width: 36em;
   }
 }
 
@@ -1084,7 +1075,7 @@ body {
 
 @media only screen and (min-width: 1200px) {
   .cf-title {
-    font-size: .75em;
+    font-size: .7em;
   }
 }
 
@@ -1322,6 +1313,71 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .latest-post-ig {
     font-size: 1.5em;
+  }
+}
+
+.ig-intro {
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  height: 22em;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  position: relative;
+  background-color: #f0f3f3;
+  text-align: center;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .ig-intro {
+    height: 14em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
+  .ig-intro {
+    height: 14em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .ig-intro {
+    height: 12em;
+  }
+}
+
+.ig-intro-content {
+  height: 16em;
+  width: 80%;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .ig-intro-content {
+    height: 14em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .ig-intro-content {
+    height: 9em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .ig-intro-content {
+    height: 10em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .ig-intro-content {
+    height: 8em;
   }
 }
 
