--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1028,19 +1028,19 @@ body {
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .cf-content {
-    width: 40em;
+    width: 42em;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .cf-content {
-    width: 40em;
+    width: 42em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .cf-content {
-    width: 36em;
+    width: 42em;
   }
 }
 
@@ -2329,8 +2329,8 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .home-hero {
-    -ms-grid-columns: auto minmax(7em, 13em) (minmax(3em, 5em))[2] minmax(7em, 8em) auto;
-        grid-template-columns: auto minmax(7em, 13em) repeat(2, minmax(3em, 5em)) minmax(7em, 8em) auto;
+    -ms-grid-columns: auto minmax(7em, 13em) (minmax(3em, 5em))[2] minmax(7em, 11em) auto;
+        grid-template-columns: auto minmax(7em, 13em) repeat(2, minmax(3em, 5em)) minmax(7em, 11em) auto;
   }
 }
 
@@ -2546,8 +2546,8 @@ input[type='checkbox'] {
   .coaching-1-1,
   .coaching-free,
   .coaching-why {
-    -ms-grid-rows: 13em 14.5em;
-        grid-template-rows: 13em 14.5em;
+    -ms-grid-rows: 13em 15.5em;
+        grid-template-rows: 13em 15.5em;
   }
 }
 
@@ -2555,8 +2555,8 @@ input[type='checkbox'] {
   .coaching-1-1,
   .coaching-free,
   .coaching-why {
-    -ms-grid-rows: 11em 15em;
-        grid-template-rows: 11em 15em;
+    -ms-grid-rows: 11em 14em;
+        grid-template-rows: 11em 14em;
   }
 }
 
@@ -2690,7 +2690,7 @@ input[type='checkbox'] {
   .home-about {
     -ms-grid-columns: auto 16em (12em)[2] auto;
         grid-template-columns: auto 16em repeat(2, 12em) auto;
-    height: 25em;
+    height: 30em;
     margin-top: 4em;
   }
 }
@@ -2909,9 +2909,9 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .quote {
-    height: 10em;
-    width: 31em;
-    padding: 2em;
+    height: 11em;
+    width: 32em;
+    padding: 2em 3em;
   }
   .quote .quote-text {
     font-size: 1.1em;
@@ -5262,8 +5262,8 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .home-hero {
-    -ms-grid-columns: auto minmax(7em, 13em) (minmax(3em, 5em))[2] minmax(7em, 8em) auto;
-        grid-template-columns: auto minmax(7em, 13em) repeat(2, minmax(3em, 5em)) minmax(7em, 8em) auto;
+    -ms-grid-columns: auto minmax(7em, 13em) (minmax(3em, 5em))[2] minmax(7em, 11em) auto;
+        grid-template-columns: auto minmax(7em, 13em) repeat(2, minmax(3em, 5em)) minmax(7em, 11em) auto;
   }
 }
 
@@ -5479,8 +5479,8 @@ input[type='checkbox'] {
   .coaching-1-1,
   .coaching-free,
   .coaching-why {
-    -ms-grid-rows: 13em 14.5em;
-        grid-template-rows: 13em 14.5em;
+    -ms-grid-rows: 13em 15.5em;
+        grid-template-rows: 13em 15.5em;
   }
 }
 
@@ -5488,8 +5488,8 @@ input[type='checkbox'] {
   .coaching-1-1,
   .coaching-free,
   .coaching-why {
-    -ms-grid-rows: 11em 15em;
-        grid-template-rows: 11em 15em;
+    -ms-grid-rows: 11em 14em;
+        grid-template-rows: 11em 14em;
   }
 }
 
@@ -5623,7 +5623,7 @@ input[type='checkbox'] {
   .home-about {
     -ms-grid-columns: auto 16em (12em)[2] auto;
         grid-template-columns: auto 16em repeat(2, 12em) auto;
-    height: 25em;
+    height: 30em;
     margin-top: 4em;
   }
 }
@@ -5842,9 +5842,9 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .quote {
-    height: 10em;
-    width: 31em;
-    padding: 2em;
+    height: 11em;
+    width: 32em;
+    padding: 2em 3em;
   }
   .quote .quote-text {
     font-size: 1.1em;
