Add quiz control buttons no styles

--- a/static/scss/components/_quiz_full.scss
+++ b/static/scss/components/_quiz_full.scss
@@ -127,3 +127,8 @@ input[type='checkbox'] {
     border-radius: 5px;
     box-shadow: 0px 0px 11px 8px white;
 }
+
+.quiz-fs-text{
+    width: 70%;
+    margin: auto;
+}
