--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2239,6 +2239,11 @@ input[type='checkbox'] {
           box-shadow: 0px 0px 11px 8px white;
 }
 
+.quiz-fs-text {
+  width: 70%;
+  margin: auto;
+}
+
 @media only screen and (max-width: 500px) {
   .home-hero {
     position: relative;
