--- a/static/scss/components/_button.scss
+++ b/static/scss/components/_button.scss
@@ -139,3 +139,33 @@
     color: white;
     text-transform: uppercase;
 }
+
+.circle-slide-btn{    
+    color: rgba(247,217,137,1);
+    position: relative;
+    height: 4em;
+    background-color: white;
+    border-radius: 2em;
+    width: 4em;
+    border-color: rgba(247,217,137,1);
+    border-width: 2px;
+    border-style: solid;
+    text-transform: uppercase;
+    @media #{$breakpoint-md}, #{$breakpoint-lg}, #{$breakpoint-xl}{
+        height: 4em;
+        width: 4em;
+        font-size: .8em;
+    }
+    @media #{$breakpoint-md}{
+    }
+    @media #{$breakpoint-lg}{
+        font-size: .75em;
+    }
+    @media #{$breakpoint-xl}{
+        font-size: .6em;
+    }
+    @media #{$breakpoint-xxl}{
+        font-size: .5em;
+    }
+}
+
