--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2167,6 +2167,11 @@ body {
   bottom: 0;
 }
 
+.quiz-section {
+  height: 27em;
+  position: relative;
+}
+
 .carousel,
 .carousel-inner {
   height: 100%;
@@ -2213,12 +2218,16 @@ body {
   margin-bottom: 1em;
 }
 
-.quiz-label {
-  margin-left: 2em;
-}
-
 .quiz-item {
-  margin: .5em;
+  height: 75%;
+  margin: auto;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 90%;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: auto auto;
@@ -2260,6 +2269,11 @@ input[type='checkbox'] {
 
 .options {
   text-align: center;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 1em;
 }
 
 .option-btn {
@@ -2306,6 +2320,10 @@ input[type='checkbox'] {
 }
 
 #resultDiv {
+  display: none;
+}
+
+#quiz {
   display: none;
 }
 
